--- a/style.css
+++ b/style.css
@@ -157,6 +157,10 @@ nav a:hover {
     background: #0fe168;
 }
 
+.social-media {
+    padding-bottom: 10px;
+}
+
 footer {
     text-align: center;
     padding: 25px;
